--- a/pages/cyo.html
+++ b/pages/cyo.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
 	<meta charset="UTF-8">
-	<title>会社の情報</title>
+	<title>著作権</title></title>
 	<link href="../style.css" rel="stylesheet" type="text/css">
 	<script src="../jquery.js">
 	</script>
@@ -41,25 +41,23 @@
 	<!--記事-->
 	<center>
     <div class="pagebox">
-      <div class="pagetop">個人情報も守ろう！ </div><br>
+      <div class="pagetop">著作権 </div>
       <center>
       <div class="pagearticlebox">
-      	<div class="pagetop2">
-          <a style="color: red;">SNSでの個人情報</a>
+        <br>著作権とは、写真や動画、音楽など様々な形の<a style="color: red;">作品</a>に対してその作品を作った人に対して与えられる権利で、簡単に言えば、自分が作った作品を勝手に他の人に使われないようにする権利のことです。<br><br>
+        著作権のある作品を使うには著作権を持っている人(<a style="color: red;">著作者</a>)の許可が必要になります。基本的に、インターネット上にある画像や動画には著作権があります。つまり、それらを勝手に使うことはできないということです。<br><br>
+        しかし、それでは「インターネット上にある画像をスマホの壁紙にすることもできないの？」と思うかもしれません。これに関しては、<a style="color: red;">私的利用</a>と言って、個人的な利用の範囲では著作者の許可なしに使うこともできます。<br><br>
+        ただ、この個人的な利用と言うのは自分だけが見れる環境での使用であって、SNSなどで使う場合にはアウトです。つまりこれは<a style="color: red;">SNSのアイコン</a>にアニメ画像を使うのもアウトだということです。もちろん、テレビの動画やインターネットで見つけた画像をSNSに<a style="color: red;">アップロード</a>するのもアウトです。「SNSでアニメアイコンの人なんてたくさんいるじゃん」と思うかもしれませんが、これは著作権が<a style="color: red;">親告罪</a>という、著作者が訴えないと罪に問われないというものなので、アニメの制作会などが<a style="color: red;">黙認</a>しているという状況です
+        
+        <div class="pagetop2">
+          <a style="color: red;">違法ダウンロード</a>
         </div>
-        <br>
-        SNSを使っているときに個人情報流出が問題となってきます。個人情報が流出するとどんなことが起こると思いますか。<br><br>
-        掲示板やSNSなどで多くの人に名前、住所、電話番号が晒されることがあります。イタズラ電話がかかってきたり、知らない業者から営業の電話がかかってきたり。<br><br>
-        必ずそうなるとは限りませんが、そうならないという保証はありません。ですのでネットに個人情報が流出しないように気をつける必要があります。<br><br>
-        そのための対策としては詳しくは<a href="sns.html">SNSのページ</a>にも書きましたが写真自体の位置情報添付をオフにする、SNSの投稿の際位置情報添付をしない。といったものが挙げられます。<br><br>
-        他にもtwitterなどの知らない人でも見れるSNSでは家から外の写真を撮ったものをアップしない、または鍵付きのアカウントにするといった配慮が必要です。家の外の様子で住所がバレてしまうこともあります。<br><br>
-        このようにSNSと言うものはとても恐ろしいものなのです。
+        <br>中高生の著作権に関わる大きな問題の一つが、違法ダウンロードです。違法ダウンロードとは、ネット上に違法にアップロードされた動画や音楽などを許可なくダウンロードすることで、犯罪になります。誰でも簡単にできるようなことですが、犯罪なので絶対にしないようにしましょう。
         <div class="pro">
           <span style="border-bottom: solid 1px black">◎ 対策　</span>
         </div>
         <center>
-        <div class="pagearticlebox2">
-        	
+        <div class="pagearticlebox2">よく知られていて多くの人が使っているサイトを使いましょう。ババ。。。
         </div>
         </center>
         <br>
