全てのページのタイトルを変更

--- a/pages/badsite.html
+++ b/pages/badsite.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8">
-    <title>悪質サイト</title>
+    <title>悪質サイトに気をつけよう！</title>
     <link rel="stylesheet" type="text/css" href="../style.css">
     <script src="../jquery.js"></script>
     <script src="../info.js"></script>
