--- a/pages/cyo.html
+++ b/pages/cyo.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
 	<meta charset="UTF-8">
-	<title>著作権</title></title>
+	<title>著作権を学ぼう！</title></title>
 	<link href="../style.css" rel="stylesheet" type="text/css">
 	<script src="../jquery.js">
 	</script>
