--- a/pages/sns.html
+++ b/pages/sns.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8">
-    <title>SNS</title>
+    <title>SNSを正しく使おう！</title>
     <link rel="stylesheet" type="text/css" href="../style.css">
     <script src="../jquery.js"></script>
     <script src="../info.js"></script>
