--- a/pages/pc.html
+++ b/pages/pc.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
 	<meta charset="UTF-8">
-	<title>会社の情報</title>
+	<title>自分のパソコンを守ろう！</title>
 	<link href="../style.css" rel="stylesheet" type="text/css">
 	<script src="../jquery.js">
 	</script>
