--- a/pages/badsite.html
+++ b/pages/badsite.html
@@ -56,7 +56,7 @@
         <br>
         <a style="color: red;">フィッシング詐欺サイト</a>、
         <a style="color: red;">ワンクリック詐欺サイト</a>、
-        <a style="color: red;">偽のアンチウイルスソフトサイト</a>、
+        <a style="color: red;">偽のウイルス対策ソフのトサイト</a>、
         <a style="color: red;">偽のサイトや改ざんされたサイト</a>などがあります。
         <center>
         <table border="1" style="border-collapse: collapse;" bordercolor="gray" >
@@ -76,11 +76,11 @@
               <td style="text-align:left">本来払わなくて良い高額な料金を請求してくる</td>
             </tr>
             <tr bgcolor="#f5f5f5">
-              <td style="text-align:left">偽のアンチウイルスソフトサイト</td>
+              <td style="text-align:left">偽のウイルス対策サイト</td>
               <td style="text-align:left">まるでコンピューターウイルスに感染しているかのような表示を出す</td>
             </tr>
             <tr>
-              <td style="text-align:left">偽のサイトや改ざんされたサイト</td>
+              <td style="text-align:left">偽のサイト</td>
               <td style="text-align:left">正規のサービスを受けられず、ウイルスに感染することもある</td>
             </tr>
           </tbody>
