全てのページにまとめ欄を追加

--- a/pages/cyo.html
+++ b/pages/cyo.html
@@ -103,6 +103,15 @@
         </center>
       </div>
       </center>
+      <div class="matomebox">
+				<div class="matometitle">
+					&nbsp;このページのまとめ&nbsp;
+				</div><br>
+				<div class="matome">
+					あああああああああああああああああああああああああああああああああああああああああああああああああああ<br>
+					あああああああああああああああああああああああああああああああああああああああああああああああああああ
+				</div>
+			</div>
     </div>
     </center>
     </center>
