--- a/pages/iot.html
+++ b/pages/iot.html
@@ -169,8 +169,8 @@
 					&nbsp;このページのまとめ&nbsp;
 				</div><br>
 				<div class="matome">
-					aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa<br>
-					aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+					あああああああああああああああああああああああああああああああああああああああああああああああああああ<br>
+					あああああああああああああああああああああああああああああああああああああああああああああああああああ
 				</div>
 			</div>
 		</div>
