--- a/pages/priv.html
+++ b/pages/priv.html
@@ -82,6 +82,15 @@
         
       </div>
       </center>
+      <div class="matomebox">
+				<div class="matometitle">
+					&nbsp;このページのまとめ&nbsp;
+				</div><br>
+				<div class="matome">
+					あああああああああああああああああああああああああああああああああああああああああああああああああああ<br>
+					あああああああああああああああああああああああああああああああああああああああああああああああああああ
+				</div>
+			</div>
     </div>
     </center>
     </center>
