--- a/pages/sns.html
+++ b/pages/sns.html
@@ -185,6 +185,15 @@
         <br>
         </div>
       </center>
+      <div class="matomebox">
+				<div class="matometitle">
+					&nbsp;このページのまとめ&nbsp;
+				</div><br>
+				<div class="matome">
+					あああああああああああああああああああああああああああああああああああああああああああああああああああ<br>
+					あああああああああああああああああああああああああああああああああああああああああああああああああああ
+				</div>
+			</div>
       </div>
     </center>
     <!-- サイト構成 -->
